# winbridge

./: .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml
tests/: test_adapters.py  test_app.py  test_container.py  test_db.py  test_distro.py  test_github.py  test_resolver.py
winbridge/: _factory.py  app.py  cli.py  container.py  db.py  distro.py  github.py  resolver.py
winbridge/adapters/: apk.py  apt.py  base.py  dnf.py  pacman.py  xbps.py  zypper.py
